--- a/HTML-CSS/watching-page.css
+++ b/HTML-CSS/watching-page.css
@@ -1,3 +1,7 @@
+body {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url(/Images/bg.jpg);
+    background-size: 100%;
+ }
 .navbar, .navbar-brand {
     color: skyblue;
 }
