--- a/HTML-CSS/sign-in3.css
+++ b/HTML-CSS/sign-in3.css
@@ -2,7 +2,8 @@ body {
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(/Images/bg.jpg);
     background-size: cover;
  }
-#checkbox {
-    padding: 40px;
-    width: 5%;
+
+input {
+    width: 25px;
+    height: 25px;
 }
