--- a/HTML-CSS/landing.css
+++ b/HTML-CSS/landing.css
@@ -4,7 +4,7 @@ body {
   flex-wrap: wrap;
   display: flex;
   font-family: "Roboto", sans-serif;
-  background-color: rgba(8, 8, 8, 0.89);
+  background-color: rgb(24, 23, 23);
 }
 
 
