--- a/watching-page.css
+++ b/watching-page.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url(/Images/bg.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url(Images/bg.jpg);
     background-size: 100%;
  }
 .navbar, .navbar-brand {
