--- a/with-account.css
+++ b/with-account.css
@@ -8,7 +8,7 @@ height: 33rem;
 color: skyblue;
 }
 .search-column {
-background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/Images/bg.jpg);
+background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(Images/bg.jpg);
 background-size: 100% 100%;
 }
 #search {
